--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					Skilled cloud architect with experience in
 					designing and implementing scalable solutions
 					on Amazon Web Services (AWS). Proficient in
-					Python, SQL, and frameworks like Django.
+					Python, SQL, and Django web framework.
 					Knowledgeable in Docker and Terraform
 					Seeking a role focusing on creating innovative
 					cloud-based solutions.
