--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
 					<h2>Audit Associate at KPMG East Africa</h2>
 					<p class="subDetails">September 2023 - Present</p>
 					<ul>
-						<li>A</li>
-						<li>B</li>
-						<li>C</li>
-						<li>D</li>
-						<li>E</li>
+						<li>Development of audit plans by understanding client’s IT environment.</li>
+						<li>Participation in IT-related risk assessment to identify vulnerabilities, threats, and their impacts.</li>
+						<li>Testing IT controls and processes to assess effectiveness.</li>
+						<li>Verifying organization’s IT practices comply with regulations and industry standards.</li>
+						<li>Preparing audit reports.</li>
 					</ul>
 				</article>
 								
