--- a/index.html
+++ b/index.html
@@ -1,161 +1,103 @@
 <!DOCTYPE html>
-<html labg="en">
+<html lang="en">
 
 <head>
-	<title>Resume | Kennedy Karira</title>
-
-	<meta name="viewport" content="width=device-width"/>
-	<meta name="description" content="Resume of Kennedy Karira"/>
-	<meta charset="UTF-8"> 
-
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-	<link type="text/css" rel="stylesheet" href="style.css">
-	<link href='https://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
-
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kennedy Karira - Cloud Architect</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Rokkitt:400,700|Lato:400,300' rel='stylesheet' type='text/css'>
+	
 	<script src="script.js"></script>
 </head>
 
-<body id="top">
-<div id="cv" class="instaFade">
-	<div class="mainDetails">
-		<div id="name">
-			<h1 class="quickFade delayTwo" style="margin-bottom: 0.33em;">Kennedy Karira</h1>
-			<h2 class="quickFade delayThree" style="margin-top: -0.33em; margin-bottom: 0.33em;">Cloud Architect</h2>
-			<h3 class="quickFade delayFour" style="margin-top: -0.33em; text-indent: 4px;">Page Visits: <span id="count"></span></h3>
-		</div>
-		
-		<div id="contactDetails" class="quickFade delayFour">
-			<ul>
-				<li><a href="mailto:kimatakarira@gmail.com" target="_blank">Email</a></li>
-				<li>+254 724 885 079</li>
-				<li>+44 791 968 1189</li>
-				<li><a href="https://www.linkedin.com/in/kennedy-karira-81a35927a/" target="_blank">Linked in</a></li>
-				<li><a href="https://github.com/kkkarira" target="_blank"> GitHub</a></li>
-			</ul>
-		</div>
-		<div class="clear"></div>
-	</div>
-	
-	<div id="mainArea" class="quickFade delayFive">
-		
-		<section>
-			<div class="sectionTitle full-width">
-				<h1>Profile</h1>
-			</div>
-		
-			<div class="sectionContent full-width">
-				<p>
-					Skilled cloud architect with experience in
-					designing and implementing scalable solutions
-					on Amazon Web Services (AWS). Proficient in
-					Python, SQL, and Django web framework.
-					Knowledgeable in Docker and Terraform
-					Seeking a role focusing on creating innovative
-					cloud-based solutions.
+<body>
+    <div id="cv">
+        <div id="name" class="mainDetails">
+            <h1>Kennedy Karira</h1>
+            <h2>Cloud Architect</h2>
+			<h3>Page Visits: <span id="count"></span></h3>
+        </div>
 
-				</p>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>Projects</h1>
-			</div>
+        <div id="contactDetails" class="mainDetails">
+            <ul>
+                <li><a href="mailto:kimatakarira@gmail.com" target="_blank">kimatakarira@gmail.com</a></li>
+                <li>+254 724 885 079</li>
+                <li>+44 791 968 1189</li>
+                <li><a href="https://www.linkedin.com/in/kennedy-karira-81a35927a/" target="_blank">LinkedIn</a></li>
+                <li><a href="https://github.com/kkkarira" target="_blank">GitHub</a></li>
+            </ul>
+        </div>
 
-			<div class="sectionContent">
-				<ul class="project-ul">
-				
-					<li class="project-li">Cloud Resume Challenge
-						<p class="project-font">Created a frontend website to host my resume. Then deployed a serverless application to it.</p>
-						<button class="project-button" onclick="location.href='https://github.com/kkkarira'">Github</button> <button class="project-button" onclick="location.href='https://www.linkedin.com/in/kennedy-karira-81a35927a/'">Linked In</button>
-					</li>
-					<li class="project-li">Coming Soon
-						<p class="project-font">Developed a...</p>
-						<button class="project-button" onclick="location.href=https://github.com/kkkarira'">Play...</button> <button class="project-button" onclick="location.href='https://github.com/kkkarira'">Repository</button>
-					</li>
-				</ul><br/>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>Key Skills</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<ul class="keySkills">
-					<li>AWS</li>
-					<li>Python</li>
-					<li>Linux</li>
-					<li>Terraform</li>
-					<li>Git</li>
-					<li>Docker</li>
-					<li>CI/CD</li>
-					<li>Serverless</li>
-					<li>HTML/CSS</li>
-				</ul>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>Education</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<article>
-					<ul class="education-list">
-						<li><a href="https://www.credly.com/badges/96cc4733-77bd-403e-bf05-80b95bd64f9d/public_url" target="_blank">AWS Solutions Architect Associate Certification</a></li>
-						<li><a href="https://www.credly.com/badges/7590021a-f5b8-43a5-9ff7-84203449e51f/public_url">AWS Certified Cloud Practitioner Certification</a></li>
-						<li>BSc. Computer Science - Jomo Kenyatta University of Agriculture & Technology ( JKUAT )</li>
-					</ul>
-				</article>
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-		<section>
-			<div class="sectionTitle">
-				<h1>Work 
-				<br/>Experience</h1>
-			</div>
-			
-			<div class="sectionContent">
-				<article class="job-article">
-					<h2>Audit Associate at KPMG East Africa</h2>
-					<p class="subDetails">September 2023 - Present</p>
-					<ul>
-						<li>Development of audit plans by understanding client’s IT environment.</li>
-						<li>Participation in IT-related risk assessment to identify vulnerabilities, threats, and their impacts.</li>
-						<li>Testing IT controls and processes to assess effectiveness.</li>
-						<li>Verifying organization’s IT practices comply with regulations and industry standards.</li>
-						<li>Preparing audit reports.</li>
-					</ul>
-				</article>
-								
-			</div>
-			<div class="clear"></div>
-		</section>
-		
-	</div>
-</div>
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3753241-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
+        <section class="professionalProfile">
+            <h1>Professional Profile</h1>
+            <p>
+                I am a highly skilled Cloud Architect with experience in designing and implementing scalable solutions on Amazon Web Services (AWS). Proficient in Python, SQL, and the Django web framework, I also have expertise in Docker and Terraform. I am actively seeking a role that allows me to create innovative cloud-based solutions to drive business success.
+            </p>
+        </section>
+
+        <section class="projects">
+            <h1>Projects</h1>
+            <ul class="project-ul">
+                <li class="project-li">
+                    <h2>Cloud Resume Challenge</h2>
+                    <p class="project-font">Designed a frontend website to host my resume and deployed a serverless application to it.</p>
+                    <div class="project-buttons">
+                        <a href="https://github.com/kkkarira" class="project-button" target="_blank">GitHub</a>
+                        <a href="https://www.linkedin.com/in/kennedy-karira-81a35927a/" class="project-button" target="_blank">LinkedIn</a>
+                    </div>
+                </li>
+                <li class="project-li">
+                    <h2>Coming Soon</h2>
+                    <p class="project-font">Developed a...</p>
+                    <div class="project-buttons">
+                        <a href="https://github.com/kkkarira" class="project-button" target="_blank">Play...</a>
+                        <a href="https://github.com/kkkarira" class="project-button" target="_blank">Repository</a>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="keySkills">
+            <h1>Key Skills</h1>
+            <ul>
+                <li>AWS</li>
+                <li>Python</li>
+                <li>Linux</li>
+                <li>Terraform</li>
+                <li>Git</li>
+                <li>Docker</li>
+                <li>CI/CD</li>
+                <li>Serverless</li>
+                <li>HTML/CSS</li>
+            </ul>
+        </section>
+
+        <section class="education">
+            <h1>Education</h1>
+            <ul class="education-list">
+                <li><a href="https://www.credly.com/badges/96cc4733-77bd-403e-bf05-80b95bd64f9d/public_url" target="_blank">AWS Solutions Architect Associate Certification</a></li>
+                <li><a href="https://www.credly.com/badges/7590021a-f5b8-43a5-9ff7-84203449e51f/public_url" target="_blank">AWS Certified Cloud Practitioner Certification</a></li>
+                <li>BSc. Computer Science - Jomo Kenyatta University of Agriculture & Technology (JKUAT)</li>
+            </ul>
+        </section>
+
+        <section class="workExperience">
+            <h1>Work Experience</h1>
+            <article class="job-article">
+                <h2>Audit Associate at KPMG East Africa</h2>
+                <p class="subDetails">September 2023 - Present</p>
+                <ul>
+                    <li>Development of audit plans by understanding the client's IT environment.</li>
+                    <li>Participation in IT-related risk assessment to identify vulnerabilities, threats, and their impacts.</li>
+                    <li>Testing IT controls and processes to assess effectiveness.</li>
+                    <li>Verifying the organization's IT practices comply with regulations and industry standards.</li>
+                    <li>Preparing audit reports.</li>
+                </ul>
+            </article>
+        </section>
+    </div>
 </body>
+
 </html>
