--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         </section>
 
         <section class="education">
-            <h1>Education</h1>
+            <h1>Education & Certifications</h1>
             <ul class="education-list">
+		<li>BSc. Computer Science - Jomo Kenyatta University of Agriculture & Technology (JKUAT)</li>
                 <li><a href="https://www.credly.com/badges/96cc4733-77bd-403e-bf05-80b95bd64f9d/public_url" target="_blank">AWS Solutions Architect Associate Certification</a></li>
                 <li><a href="https://www.credly.com/badges/7590021a-f5b8-43a5-9ff7-84203449e51f/public_url" target="_blank">AWS Certified Cloud Practitioner Certification</a></li>
-                <li>BSc. Computer Science - Jomo Kenyatta University of Agriculture & Technology (JKUAT)</li>
             </ul>
         </section>
 
