--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </li>
                 <li class="project-li">
-                    <h2>Coming Soon</h2>
+                    <h2>Coming Real Soon</h2>
                     <p class="project-font">Developed a...</p>
                     <div class="project-buttons">
                         <a href="https://github.com/kkkarira" class="project-button" target="_blank">Play...</a>
